force-app/main/default/objects/Verification_History__c/Verification_History__c.object-meta.xml
<CustomObject>
    <label>Verification History</label>
    <nameField>
        <displayFormat>VH-{DDMMYY}-{0000}</displayFormat>
        <label>Verification History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>