force-app/main/default/objects/Verification_History__c/fields/Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>