force-app/main/default/objects/Verification_History__c/fields/Extension_Number__c.field-meta.xml
<CustomField>
    <fullName>Extension_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Extension Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>