force-app/main/default/objects/Verification_History__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cust Phone Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>