force-app/main/default/objects/Verification_History__c/fields/TMB_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_Cust_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Cust ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>