force-app/main/default/objects/Verification_History__c/fields/Verification_Action__c.field-meta.xml
<CustomField>
    <fullName>Verification_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>