force-app/main/default/objects/Verification_History__c/fields/Verification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Date/Time</label>
    <type>DateTime</type>
</CustomField>