force-app/main/default/objects/Verification_History__c/fields/Verification_Result__c.field-meta.xml
<CustomField>
    <fullName>Verification_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Result</label>
    <length>40</length>
    <type>Text</type>
</CustomField>