force-app/main/default/objects/Verification_History__c/fields/Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>Verification_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verify By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>