force-app/main/default/objects/Verification_History__c/fields/Xfer__c.field-meta.xml
<CustomField>
    <fullName>Xfer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Xfer</label>
    <type>TextArea</type>
</CustomField>